--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>peraulis in cros</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
    <h1 class="date" id="date">sto pensando...</h1>
    <script src="script.js"></script>
